2011-01-17  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/network/RouterThread.h: Fix call to receive.

	* include/network/NeighborIn.h: Add more debug information.
	* include/network/NeighborOut.h: Likewise.
	* include/network/NeighborThread.h: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.

	* include/network/Handler.h: Store my notifications so that my
	slaves can read them.
	* include/network/Handler.tcc: Likewise.

	* include/dmcs/StreamingDMCS.h: Store ConflictNotification so that
	NeighborOut can read it.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* include/dmcs/ConflictNotification.h: Likewise.

2011-01-16  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/network/ConcurrentMessageQueueHelper.h: Overwritten
	message leaks.

	* include/network/Makefile.am: Don't include
	boost::message_queue-related stuff for now.
	* src/network/Makefile.am: Likewise.
	* testsuite/testMessagingGateway.cpp: Likewise.

	* src/network/ThreadFactory.cpp: Fix regression.

	* include/network/AsynClient.tcc: Use int timeout.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* testsuite/testMessagingGateway.cpp: Likewise.

	* include/dmcs/ConflictNotification.h: Include boost/thread.hpp.
	* include/dmcs/OutputNotification.h: Likewise.

	* include/network/ConcurrentMessageQueue.h: Add try_send and
	try_receive.
	* testsuite/testMessagingGateway.cpp: Likewise.

	* src/network/MessageDispatcher.cpp: Likewise.
	* src/network/ConcurrentMessageDispatcher.cpp: Likewise.
	* include/network/MessagingGateway.h: Likewise.
	* include/network/MessageDispatcher.h: Likewise.
	* include/network/ConcurrentMessageDispatcher.h: Likewise.

2011-01-16  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/network/ConcurrentMessageQueueHelper.h: New file.

	* include/dmcs/StreamingCommandType.h: Use ConcurrentMessageQueue