@@ -1,5 +1,16 @@
 2011-01-17  Minh Dao Tran  <dao@kr.tuwien.ac.at>
 
+	* src/network/OutputThread.cpp: Setup header after receive k models.
+
+	* src/dmcs/StreamingDMCS.cpp: Notify SAT via overwrite_send.
+
+	* include/dmcs/StreamingDMCS.h: Store message to SAT.
+
+	* include/solver/RelSatSolver.h: Pass (is_leaf) to RelSatSolver.
+	* src/solver/RelSatSolver.cpp: Likewise.
+	* include/solver/SatSolverFactory.h: Likewise.
+	* src/network/ThreadFactory.cpp: Likewise.
+
 	* include/network/RouterThread.h: Fix call to receive.
 
 	* include/network/NeighborIn.h: Add more debug information.
